<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qoogle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="searchButton">Search</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="queryHint">Enter Query Word Here ....</string>
    <string name="title_activity_result_screen">ResultScreen</string>
    <string name="totalResult" >Total Result:</string>
    <string name="pageResult" >Pages:</string>
    <string name="prevResult" >Prev.</string>
    <string name="pageNumResult" >Page Number:</string>
    <string name="nextResult" >Next</string>

</resources>
