<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.roic.amr_ebada.qoogle.ResultScreen"
    android:background="@drawable/mainqoogle">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/totalResult"
        android:id="@+id/total"
        android:textColor="#000"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pageResult"
        android:id="@+id/pages"
        android:textColor="#000"
        android:layout_alignBottom="@+id/total"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total"
        android:layout_centerHorizontal="true"
        android:weightSum="4"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/prevResult"
            android:id="@+id/prevBt"
            android:textColor="#bbb"
            android:background="#000"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pageNumResult"
            android:id="@+id/pageNum"
            android:textColor="#000"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:background="#bbb"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/nextResult"
            android:textColor="#bbb"
            android:background="#000"
            android:id="@+id/nextBt"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultList"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:background="#ff008203" />

</RelativeLayout>
